Fixed readability of the blue marked font

--- a/themes/mediathekview/assets/css/style.css
+++ b/themes/mediathekview/assets/css/style.css
@@ -1,3 +1,4 @@
+
 /*
 Custom style
 */
@@ -224,6 +225,7 @@ address > .adresse {
 
 .bluemarked {
   background-color: blue;
+  color: white;
 }
 
 .redfont {
